Improving Allure report, typo, fixing WebDriver and Cucumber warnings